updates java token example to account for deprecated sun.* package